...
    val label: String
) {
    object Tasks : BottomNavItem(
        "tasks",
        Icons.Outlined.Inbox,
        Icons.Outlined.Inbox,
        "Inbox"
    )
    object Dashboard : BottomNavItem(
        "dashboard",
        Icons.Outlined.BarChart,
        Icons.Outlined.BarChart,
        "Insights"
    )
    object Settings : BottomNavItem(
        "settings",
        Icons.Outlined.Settings,
        Icons.Outlined.Settings,
        "Settings"
    )
}

@Composable
fun MainNavigation() {
    val navController = rememberNavController()
...
